--- a/package.json
+++ b/package.json
@@ -2,18 +2,24 @@
   "name": "to-do-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "5.7.1",
+    "node": "13.12.0"
+  },
   "dependencies": {
     "antd-mobile": "^2.3.4",
     "cra-template": "1.0.3",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "serve": "^11.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "serve build/ -p $PORT "
   },
   "eslintConfig": {
     "extends": "react-app"
