--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   },
   "dependencies": {
     "antd-mobile": "^2.3.4",
-    "cra-template": "1.0.3",
+    "cra-template": "^1.1.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.0",
     "serve": "^11.3.2"
   },
   "scripts": {
