--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "engines": {
     "npm": "5.7.1",
-    "node": "13.12.0"
+    "node": "^13"
   },
   "dependencies": {
     "antd-mobile": "^2.3.4",
